--- a/submissions/MitchfFirstGit/Pop-up/css/main.css
+++ b/submissions/MitchfFirstGit/Pop-up/css/main.css
@@ -1,1 +1,209 @@
-.nav{display:flex;justify-content:flex-end}.nav li{list-style:none;margin:0 5px}.nav li .show-hide-container{position:absolute!important;clip:rect(1px 1px 1px 1px);clip:rect(1px,1px,1px,1px);padding:0!important;border:0!important;height:1px!important;width:1px!important;overflow:hidden}.nav li .show-hide-container:hover+.show-hide-container-btn{opacity:1}.nav li .show-hide-container:checked~.container{display:block}.nav li .show-hide-container:focus+.show-hide-container-btn{outline:2px solid #ccc}.nav li .show-hide-container-btn{background:url(../img/icons_sprite.png) no-repeat -7px -1808px;height:16px;width:16px;display:inline-block;cursor:pointer;opacity:.55}.nav li .container{display:none;border:1px solid #ccc;position:absolute;top:55px;right:75px;box-shadow:0 3px 10px rgba(0,0,0,.2);border-radius:3px}.nav li .container:before{content:"";position:absolute;top:-8px;right:32px;width:15px;height:15px;background-color:#fff;border-top:1px solid #ccc;border-right:1px solid #ccc;transform:rotate(-45deg)}.nav li .container .items-container{overflow-y:auto;width:330px;height:417px}.nav li .container .items-container .main-items{display:flex;flex-wrap:wrap;text-align:center;justify-content:space-around;padding:0;margin-top:10px}.nav li .container .items-container .show-additional-items,.nav li .container .items-container .show-additional-items:checked+.show-additional-items-btn{position:absolute!important;clip:rect(1px 1px 1px 1px);clip:rect(1px,1px,1px,1px);padding:0!important;border:0!important;height:1px!important;width:1px!important;overflow:hidden}.nav li .container .items-container .show-additional-items:checked~.hr-line{display:block}.nav li .container .items-container .show-additional-items:checked~.additional-items{display:flex;align-content:space-around;flex-wrap:wrap;text-align:center;justify-content:space-around;padding:0;margin-top:10px}.nav li .container .items-container .show-additional-items:focus+.show-additional-items-btn{outline:2px solid #ccc}.nav li .container .items-container .show-additional-items-btn{background-color:#ebebeb;text-align:center;padding:10px;margin-top:14px;display:block;cursor:pointer}.nav li .container .items-container .hr-line{display:none;width:90%;border-bottom:1px solid #ebebeb;margin-top:50px}.nav li .container .items-container .additional-items{display:none}.nav li .container .items-container .additional-items .even-more-link{margin:30px 0 10px;text-decoration:underline;font-size:1.1rem}.nav li .container .items-container .additional-items li,.nav li .container .items-container .main-items li{width:80px;margin:10px;cursor:pointer;z-index:1}.nav li .container .items-container .additional-items li:hover,.nav li .container .items-container .main-items li:hover{outline:1px solid #ccc}.nav li .container .items-container .additional-items li .item,.nav li .container .items-container .main-items li .item{background:url(../img/icons_sprite.png) no-repeat;width:50px;height:50px;display:block;margin:0 auto}.nav li .container .items-container .additional-items li .translate,.nav li .container .items-container .main-items li .translate{background-position:-10px -2191px}.nav li .container .items-container .additional-items li .google,.nav li .container .items-container .main-items li .google{background-position:-10px -425px}.nav li .container .items-container .additional-items li .search,.nav li .container .items-container .main-items li .search{background-position:-10px -1915px}.nav li .container .items-container .additional-items li .youtube,.nav li .container .items-container .main-items li .youtube{background-position:-32px -2338px}.nav li .container .items-container .additional-items li .play,.nav li .container .items-container .main-items li .play{background-position:-13px -356px}.nav li .container .items-container .additional-items li .gmail,.nav li .container .items-container .main-items li .gmail{background-position:-8px -2751px}.nav li .container .items-container .additional-items li .drive,.nav li .container .items-container .main-items li .drive{background-position:-8px -530px}.nav li .container .items-container .additional-items li .calendar,.nav li .container .items-container .main-items li .calendar{background-position:-11px -184px}.nav li .container .items-container .additional-items li .blogger,.nav li .container .items-container .main-items li .blogger{background-position:-28px -1190px}.nav li .container .items-container .additional-items li .photos,.nav li .container .items-container .main-items li .photos{background-position:-8px -1464px}.nav li .container .items-container .additional-items li .maps,.nav li .container .items-container .main-items li .maps{background-position:-34px -1257px}.nav li .container .items-container .additional-items li .contacts,.nav li .container .items-container .main-items li .contacts{background-position:-10px -1604px}.nav li .container .items-container .additional-items li .hangouts,.nav li .container .items-container .main-items li .hangouts{background-position:-13px -114px}.nav li .container .items-container .additional-items li .news,.nav li .container .items-container .main-items li .news{background-position:-10px -1988px}.nav li .container .items-container .additional-items li .jamboard,.nav li .container .items-container .main-items li .jamboard{background-position:-18px -1849px}.nav li .container .items-container .additional-items li .classroom,.nav li .container .items-container .main-items li .classroom{background-position:-10px -670px}.nav li .container .items-container .additional-items li .earth,.nav li .container .items-container .main-items li .earth{background-position:-10px -2402px}.nav li .container .items-container .additional-items li .collections,.nav li .container .items-container .main-items li .collections{background-position:-15px -1535px}.nav li a{text-decoration:none;display:block}.nav li a:focus{outline:2px solid #ccc}.nav .bell{background-color:#000;border-radius:50%;width:30px;height:29px;opacity:.55;display:flex;justify-content:center;align-items:center;position:relative;bottom:5px}.nav .bell:hover{opacity:1}.nav .bell a{background:url(../img/icons_sprite.png) no-repeat -35px -1356px;width:23px;height:26px}.nav .account{background-color:#8e00a2;font-size:1.5rem;border-radius:50%;width:45px;height:45px;display:flex;justify-content:center;align-items:center;position:relative;bottom:12px;opacity:.55}.nav .account:hover{opacity:1}.nav .account a{color:#fff;font-weight:700;font-family:sans-serif}
+.nav {
+  display: flex;
+  justify-content: flex-end; }
+  .nav li {
+    list-style: none;
+    margin: 0 5px; }
+    .nav li a {
+      text-decoration: none;
+      display: block; }
+
+.container {
+  display: none;
+  border: 1px solid #ccc;
+  position: absolute;
+  top: 55px;
+  right: 75px;
+  box-shadow: 0 3px 10px rgba(0, 0, 0, 0.2);
+  border-radius: 3px; }
+  .container:before {
+    content: "";
+    position: absolute;
+    top: -8px;
+    right: 32px;
+    width: 15px;
+    height: 15px;
+    background-color: white;
+    border-top: 1px solid #ccc;
+    border-right: 1px solid #ccc;
+    transform: rotate(-45deg); }
+
+.items-container {
+  overflow-y: auto;
+  width: 330px;
+  height: 417px; }
+  .items-container .main-items {
+    display: flex;
+    flex-wrap: wrap;
+    text-align: center;
+    justify-content: space-around;
+    padding: 0;
+    margin-top: 10px; }
+  .items-container .additional-items {
+    display: none; }
+
+.main-items li,
+.additional-items li {
+  width: 80px;
+  margin: 10px;
+  cursor: pointer;
+  z-index: 1; }
+  .main-items li:hover,
+  .additional-items li:hover {
+    outline: 1px solid #ccc; }
+
+.item {
+  background: url("../img/icons_sprite.png") no-repeat;
+  width: 50px;
+  height: 50px;
+  display: block;
+  margin: 0 auto; }
+
+.show-additional-items,
+.show-hide-container,
+.show-additional-items:checked + .show-additional-items-btn {
+  position: absolute;
+  clip: rect(1px 1px 1px 1px);
+  clip: rect(1px, 1px, 1px, 1px);
+  padding: 0;
+  border: 0;
+  height: 1px;
+  width: 1px;
+  overflow: hidden; }
+
+.show-hide-container-btn {
+  background: url("../img/icons_sprite.png") no-repeat -7px -1808px;
+  height: 16px;
+  width: 16px;
+  display: inline-block;
+  cursor: pointer;
+  opacity: .55; }
+
+.show-hide-container:hover + .show-hide-container-btn,
+.bell:hover,
+.account:hover {
+  opacity: 1; }
+
+.show-hide-container:checked ~ .container,
+.show-additional-items:checked ~ .hr-line {
+  display: block; }
+
+.show-additional-items-btn {
+  background-color: #ebebeb;
+  text-align: center;
+  padding: 10px;
+  margin-top: 14px;
+  display: block;
+  cursor: pointer; }
+
+.show-additional-items:checked ~ .additional-items {
+  display: flex;
+  align-content: space-around;
+  flex-wrap: wrap;
+  text-align: center;
+  justify-content: space-around;
+  padding: 0;
+  margin-top: 10px; }
+
+.hr-line {
+  display: none;
+  width: 90%;
+  border-bottom: 1px solid #ebebeb;
+  margin-top: 50px; }
+
+.additional-items .even-more-link {
+  margin: 30px 0 10px 0;
+  text-decoration: underline;
+  font-size: 1.1rem; }
+
+.show-additional-items:focus + .show-additional-items-btn,
+.show-hide-container:focus + .show-hide-container-btn,
+.nav a:focus {
+  outline: 2px solid #ccc; }
+
+.bell {
+  background-color: black;
+  border-radius: 50%;
+  width: 30px;
+  height: 29px;
+  opacity: 0.55;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: relative;
+  bottom: 5px; }
+  .bell a {
+    background: url("../img/icons_sprite.png") no-repeat -35px -1356px;
+    width: 23px;
+    height: 26px; }
+
+.account {
+  background-color: #8E00A2;
+  font-size: 1.5rem;
+  border-radius: 50%;
+  width: 45px;
+  height: 45px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: relative;
+  bottom: 12px;
+  opacity: 0.55; }
+  .account a {
+    color: white;
+    font-weight: bold;
+    font-family: sans-serif; }
+
+.translate {
+  background-position: -10px -2191px; }
+
+.google {
+  background-position: -10px -425px; }
+
+.search {
+  background-position: -10px -1915px; }
+
+.youtube {
+  background-position: -32px -2338px; }
+
+.play {
+  background-position: -13px -356px; }
+
+.gmail {
+  background-position: -8px -2751px; }
+
+.drive {
+  background-position: -8px -530px; }
+
+.calendar {
+  background-position: -11px -184px; }
+
+.blogger {
+  background-position: -28px -1190px; }
+
+.photos {
+  background-position: -8px -1464px; }
+
+.maps {
+  background-position: -34px -1257px; }
+
+.contacts {
+  background-position: -10px -1604px; }
+
+.hangouts {
+  background-position: -13px -114px; }
+
+.news {
+  background-position: -10px -1988px; }
+
+.jamboard {
+  background-position: -18px -1849px; }
+
+.classroom {
+  background-position: -10px -670px; }
+
+.earth {
+  background-position: -10px -2402px; }
+
+.collections {
+  background-position: -15px -1535px; }
