--- a/submissions/Eugene50/popup-menu/style.css
+++ b/submissions/Eugene50/popup-menu/style.css
@@ -14,7 +14,7 @@ img {
    padding-top: 10px;
 }
 
-#container {
+.container {
    display: flex;
    flex-wrap: wrap;
    justify-content: flex-end;
@@ -41,7 +41,7 @@ img {
    padding: 1px;  
 }
 
-#wraper {
+.wraper {
    height: 456px;
    width: 310px;
    margin-left: 300px;
@@ -53,12 +53,26 @@ img {
    margin-left: 0px;
 }
 
+#main-checkbox:checked ~ label {
+   display: block;
+   width: 20px;
+   height: 20px;
+}
+
+#main-checkbox:focus ~ .menu-label {
+   outline: 1px solid blue;
+}
+
+#main-checkbox:checked ~ .wraper {
+   display: block;
+}
+
 #sub-checkbox {
-   visibility: hidden;
+   opacity: 0;
    margin-top: -30px;
 }
 
-#sub-checkbox:focus ~ #more-label p {
+#sub-checkbox:focus ~ .more-label p {
    outline: 1px solid blue;
 }
 
@@ -66,25 +80,11 @@ img {
    display: none;
 }
 
-#sub-checkbox:checked ~ #sub-container  {
+#sub-checkbox:checked ~ .sub-container  {
    display: flex;
 }
 
-#main-checkbox:checked ~ label{
-   display: block;
-   width: 20px;
-   height: 20px;
-}
-
-#main-checkbox:focus ~ #menu-label {
-   outline: 1px solid blue;
-}
-
-#main-checkbox:checked ~ #wraper {
-   display: block;
-}
-
-#more-btn {
+.more-btn {
    padding-top: 10px;
    height: 20px;
    margin-top: 36px;
@@ -94,12 +94,12 @@ img {
    padding-bottom: 10px;
 }
 
-#more-label p:hover {
+.more-label p:hover {
    cursor: pointer;
    background-color: grey;
 }
 
-#hidden-container {
+.hidden-container {
    display: flex;
    flex-wrap: wrap;
    flex-direction: row;
@@ -107,7 +107,7 @@ img {
    width: 303px;
 }
 
-#sub-container {
+.sub-container {
    display: flex;
    flex-wrap: wrap;
    flex-direction: row;
@@ -118,27 +118,27 @@ img {
    border-inline-start-width: 2px;
  }
  
-#footer-link {
+.footer-link {
     height: 30px;
     margin-top: 20px;
     margin-left: 80px;
     margin-bottom: 10px;
  }
 
-#footer-link a:hover {
+.footer-link a:hover {
    text-decoration: underline;
    color: blue;
  }
 
-#alf {
+.alf {
    border-radius: 180px;
 }
 
 #main-checkbox {
-   visibility: hidden;
+   opacity: 0;
 }
  
-#menu-icon {
+.menu-icon {
    cursor: pointer;
    margin-top: -10px;
 }
@@ -147,11 +147,11 @@ img {
    text-decoration: underline;
 }
 
-#blog {
+.blog {
    margin-right: -40px;
 }
 
-#more-label p {
+.more-label p {
    height: 30px;
    width: 309px;
    background-color: rgb(226, 226, 226);
@@ -160,6 +160,6 @@ img {
    padding-top: 7px;
 }
 
-#more-label {
+.more-label {
    cursor: pointer;
 }
