--- a/submissions/justdevway/html5-form/src/scss/components/doc-select.scss
+++ b/submissions/justdevway/html5-form/src/scss/components/doc-select.scss
@@ -43,8 +43,7 @@ $status-position: -8px;
     &:focus {
       border: 3px solid var(--lightgreen);
 
-
-      @media only screen and (max-width: $mobile) {
+      @media only screen and (max-width: $tablet) {
         border: inherit;
       }
     }
