--- a/submissions/justdevway/html5-form/src/scss/components/upload.scss
+++ b/submissions/justdevway/html5-form/src/scss/components/upload.scss
@@ -39,7 +39,7 @@
       color: #fff;
       background: var(--lightgreen);
 
-      @media only screen and (max-width: $mobile) {
+      @media only screen and (max-width: $tablet) {
         color: inherit;
         background: inherit;
       }
