--- a/submissions/justdevway/html5-form/src/scss/components/main-input.scss
+++ b/submissions/justdevway/html5-form/src/scss/components/main-input.scss
@@ -6,6 +6,7 @@
 
   &__input {
     width: 100%;
+    height: 39px;
     padding: 10px 27px 10px 15px;
     border-radius: 2.5px;
     border: 1px solid var(--gray);
