--- a/submissions/Aldegid/google-style-popup/app/sass/main.sass
+++ b/submissions/Aldegid/google-style-popup/app/sass/main.sass
@@ -48,10 +48,13 @@ body
 		background-image: url(../img/photo.jpg)
 
 .hidden-input
-	opacity: 0
-	width: 0
-	height: 0
-	margin: 0
+	overflow: hidden
+	clip: rect(0 0 0 0)
+	height: 1px
+	width: 1px
+	margin: -1px
+	padding: 0
+	border: 0
 
 .popup__icon
 	background-image: url(../img/mnu.png)
